<resources>
    <string name="app_name">Gitorade</string>
    <string name="failed_to_navigate">Failed to navigate</string>
    <string name="username">Username</string>
    <string name="git_in">Git In</string>
    <string name="password">Password</string>
    <string name="enter_proper_password">Enter proper password</string>
    <string name="enter_proper_username">Enter proper username</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="failed_to_auth">Failed to authenticate</string>
    <string name="search_repositories">Search Repositories</string>
    <string name="name">Name: </string>
    <string name="full_name">Full Name:</string>
    <string name="watch_count">Watch Count:</string>
    <string name="please_search_a_repository">Please search a repository</string>
    <string name="no_inter_msg">You\'re offline</string>
    <string name="no_results_found">No results found</string>
</resources>